updates template var

--- a/email_template.html
+++ b/email_template.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<p>Welcome to clubs. We can style this.</p>
-		<a href="{{.RedirectUrl}}" target="_blank">Click here to sign in</a>
+		<a href="{{.EmailVerificationLink}}" target="_blank">Click here to sign in</a>
 	</body>
 </html>
