--- a/email_template.html
+++ b/email_template.html
@@ -359,9 +359,9 @@
                       <td>
                         <p>Hi there,</p>
 												{{if .IsSignIn}}
-													<p>Welcome back to Clubs, the DAO builder for the creator economy.</p>
+													<p>Welcome back to Clubs, the web3 home for innovators and creators.</p>
 												{{else}}
-													<p>Welcome to Clubs, the DAO builder for the creator economy. Before you get started, we need to simply verify your account.</p>
+													<p>Welcome to Clubs, the web3 home for innovators and creators. Before you get started, we need to simply verify your account.</p>
 												{{end}}
                         
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
@@ -403,7 +403,7 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">Frame00, 東京都渋谷区神南１丁目６−５</span>
+                    <span class="apple-link">FRAME00, 1-6-5 Jinnan Shibuya-ku, Tokyo</span>
                     <!-- <br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>. -->
                   </td>
                 </tr>
